# school_manager

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  parents_api.rs  students_api.rs  teachers_api.rs
src/models/: attendance.rs  classroom.rs  classroom_student.rs  course.rs  exam.rs  exam_result.rs  exam_type.rs  grade.rs  mod.rs  parent.rs  student.rs  teacher.rs
src/repository/: mongodb_repo.rs
